--- a/03-racing/racing.html
+++ b/03-racing/racing.html
@@ -6,6 +6,7 @@
     </head>
     <body> 
         <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <p id='debugText'>(recent text display or temporary debug output)</p>
         <script src='racing.js'></script>
  </body>
  </html>
