--- a/03-racing/racing.html
+++ b/03-racing/racing.html
@@ -7,6 +7,10 @@
     <body> 
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         <p id='debugText'>(recent text display or temporary debug output)</p>
-        <script src='racing.js'></script>
+        <script src="GraphicsCommon.js"></script>
+        <script src="Car.js"></script>
+        <script src="Track.js"></script>
+        <script src="Input.js"></script>
+        <script src='Main.js'></script>
  </body>
  </html>
