Quickly added a start menu to car racing game

--- a/03-racing/racing.html
+++ b/03-racing/racing.html
@@ -6,7 +6,7 @@
     </head>
     <body> 
         <canvas id="gameCanvas" width="800" height="600"></canvas>
-        <p id='debugText'>(recent text display or temporary debug output)</p>
+        <p id='debugText' style="font-size:2em; font-family: helvetica; font-weight: bold"></p>
         <script src="js/GraphicsCommon.js"></script>
         <script src="js/Car.js"></script>
         <script src="js/Track.js"></script>
