--- a/05-space-battle/space-battle.html
+++ b/05-space-battle/space-battle.html
@@ -9,6 +9,7 @@
         <p id='debugText' style="font-size:2em; font-family: helvetica; font-weight: bold"></p>
         <script src="js/GraphicsCommon.js"></script>
         <script src="js/Player.js"></script>
+        <script src="js/Shot.js"></script>
         <script src="js/ImageLoading.js"></script>
         <script src="js/Input.js"></script>
         <script src='js/Main.js'></script>
