Added more generic Actor class for player, shot and soon to be ufo class to inherit from

--- a/05-space-battle/space-battle.html
+++ b/05-space-battle/space-battle.html
@@ -8,6 +8,7 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         <p id='debugText' style="font-size:2em; font-family: helvetica; font-weight: bold"></p>
         <script src="js/GraphicsCommon.js"></script>
+        <script src="js/Actor.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Shot.js"></script>
         <script src="js/ImageLoading.js"></script>
