Added enemy class and have it loaded and moving in the scene

--- a/05-space-battle/space-battle.html
+++ b/05-space-battle/space-battle.html
@@ -11,6 +11,7 @@
         <script src="js/Actor.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Shot.js"></script>
+        <script src="js/Enemy.js"></script>
         <script src="js/ImageLoading.js"></script>
         <script src="js/Input.js"></script>
         <script src='js/Main.js'></script>
