--- a/06-real-time-strategy/real-time-strategy.html
+++ b/06-real-time-strategy/real-time-strategy.html
@@ -8,6 +8,7 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         <p id='debugText' style="font-size:2em; font-family: helvetica; font-weight: bold"></p>
         <script src="js/GraphicsCommon.js"></script>
+        <script src="js/Unit.js"></script>
         <script src="js/Main.js"></script>
  </body>
  </html>
